feat: añadir visor de contactos con autenticación básica HTTP (#/admin)
Agrega endpoint GET /api/admin/contacts con validación de credenciales ADMIN_USER/ADMIN_PASSWORD, UI para login y filtrado por tema/email, y tablas para visualizar solicitudes de contacto registradas.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - "8000"
     environment:
       DB_PATH: /data/contacts.db
+      ADMIN_USER: ${ADMIN_USER}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     volumes:
       - contacts_data:/data
     labels:
