--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# Local environment / secrets
+.env
+.env.*
+!.env.example
 .env.local
+
+# SSH / deploy keys
+.ssh/
 .ssh_deploy_key
 .ssh_deploy_key.pub
+.ssh_deploy_key*
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+
+# Common private key / certificate formats
+*.pem
+*.p12
+*.pfx
+*.key
+
+# Credentials files
+credentials*.json
+secrets*.json
+
