chore: actualizar docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
-    image: da-tica_portal_web:1.0.0
+    image: 'da-tica_portal_web:1.0.0'
     restart: unless-stopped
     networks:
       - coolify
     expose:
-      - "8080"
+      - '8080'
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://127.0.0.1:8080/"]
       interval: 30s
@@ -16,27 +16,22 @@ services:
       retries: 3
       start_period: 10s
     labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=coolify"
+      - traefik.enable=true
+      - traefik.docker.network=coolify
 
-      # --- Routers HTTPS (Usando variables) ---
-      # El nombre del router ahora es dinámico: ${CLIENT_ID}-web
-      - "traefik.http.routers.${CLIENT_ID}-web.rule=Host(`${DOMAIN}`)"
-      - "traefik.http.routers.${CLIENT_ID}-web.entrypoints=https"
-      - "traefik.http.routers.${CLIENT_ID}-web.tls=true"
-      - "traefik.http.routers.${CLIENT_ID}-web.tls.certresolver=letsencrypt"
+      # --- CORRECCIÓN: Sin comillas para que lea las variables ---
+      - traefik.http.routers.${CLIENT_ID}-web.rule=Host(`${DOMAIN}`)
+      - traefik.http.routers.${CLIENT_ID}-web.entrypoints=https
+      - traefik.http.routers.${CLIENT_ID}-web.tls=true
+      - traefik.http.routers.${CLIENT_ID}-web.tls.certresolver=letsencrypt
 
-      # --- Servicio Interno ---
-      - "traefik.http.services.${CLIENT_ID}-web.loadbalancer.server.port=8080"
+      - traefik.http.services.${CLIENT_ID}-web.loadbalancer.server.port=8080
 
-      # --- Redirección HTTP -> HTTPS ---
-      - "traefik.http.routers.${CLIENT_ID}-web-http.rule=Host(`${DOMAIN}`)"
-      - "traefik.http.routers.${CLIENT_ID}-web-http.entrypoints=http"
-      - "traefik.http.routers.${CLIENT_ID}-web-http.middlewares=${CLIENT_ID}-redirect"
-
-      # --- Middleware ---
-      - "traefik.http.middlewares.${CLIENT_ID}-redirect.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.${CLIENT_ID}-redirect.redirectscheme.permanent=true"
+      - traefik.http.routers.${CLIENT_ID}-web-http.rule=Host(`${DOMAIN}`)
+      - traefik.http.routers.${CLIENT_ID}-web-http.entrypoints=http
+      - traefik.http.routers.${CLIENT_ID}-web-http.middlewares=${CLIENT_ID}-redirect
+      - traefik.http.middlewares.${CLIENT_ID}-redirect.redirectscheme.scheme=https
+      - traefik.http.middlewares.${CLIENT_ID}-redirect.redirectscheme.permanent=true
 
 networks:
   coolify:
