--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,12 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=coolify
-
-      # --- CORRECCIÓN: Sin comillas para que lea las variables ---
+      # ✅ CORRECTO: Host() con paréntesis normales
       - traefik.http.routers.${CLIENT_ID}-web.rule=Host(`${DOMAIN}`)
       - traefik.http.routers.${CLIENT_ID}-web.entrypoints=https
       - traefik.http.routers.${CLIENT_ID}-web.tls=true
       - traefik.http.routers.${CLIENT_ID}-web.tls.certresolver=letsencrypt
-
       - traefik.http.services.${CLIENT_ID}-web.loadbalancer.server.port=8080
-
       - traefik.http.routers.${CLIENT_ID}-web-http.rule=Host(`${DOMAIN}`)
       - traefik.http.routers.${CLIENT_ID}-web-http.entrypoints=http
       - traefik.http.routers.${CLIENT_ID}-web-http.middlewares=${CLIENT_ID}-redirect
