chore: actualizar docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,17 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=coolify
-      # ✅ CORRECTO: Host() con paréntesis normales
-      - traefik.http.routers.${CLIENT_ID}-web.rule=Host(`${DOMAIN}`)
-      - traefik.http.routers.${CLIENT_ID}-web.entrypoints=https
-      - traefik.http.routers.${CLIENT_ID}-web.tls=true
-      - traefik.http.routers.${CLIENT_ID}-web.tls.certresolver=letsencrypt
-      - traefik.http.services.${CLIENT_ID}-web.loadbalancer.server.port=8080
-      - traefik.http.routers.${CLIENT_ID}-web-http.rule=Host(`${DOMAIN}`)
-      - traefik.http.routers.${CLIENT_ID}-web-http.entrypoints=http
-      - traefik.http.routers.${CLIENT_ID}-web-http.middlewares=${CLIENT_ID}-redirect
-      - traefik.http.middlewares.${CLIENT_ID}-redirect.redirectscheme.scheme=https
-      - traefik.http.middlewares.${CLIENT_ID}-redirect.redirectscheme.permanent=true
+      # ✅ HARDCODED - sin variables
+      - traefik.http.routers.portal-da-tica-web.rule=Host(`portal.da-tica.com`)
+      - traefik.http.routers.portal-da-tica-web.entrypoints=https
+      - traefik.http.routers.portal-da-tica-web.tls=true
+      - traefik.http.routers.portal-da-tica-web.tls.certresolver=letsencrypt
+      - traefik.http.services.portal-da-tica-web.loadbalancer.server.port=8080
+      - traefik.http.routers.portal-da-tica-web-http.rule=Host(`portal.da-tica.com`)
+      - traefik.http.routers.portal-da-tica-web-http.entrypoints=http
+      - traefik.http.routers.portal-da-tica-web-http.middlewares=portal-da-tica-redirect
+      - traefik.http.middlewares.portal-da-tica-redirect.redirectscheme.scheme=https
+      - traefik.http.middlewares.portal-da-tica-redirect.redirectscheme.permanent=true
 
 networks:
   coolify:
